# tool

./: .gitignore  CLAUDE.md  CMakeLists.txt
.cache/clangd/index/: base.h.9E8A648E02B10B54.idx  base64.cpp.6E8A18265013CD0B.idx  base64.h.280C859E9A902316.idx  cocoa_init.m.26BE7325E8F11517.idx  cocoa_joystick.h.DC3A0C763DD1EE1E.idx  cocoa_joystick.m.F37140A92B09EC20.idx  cocoa_monitor.m.FC52D53EF38A8C86.idx  cocoa_platform.h.7DABAC87AE070CA3.idx  cocoa_time.c.D0CAB9F05C20CF44.idx  cocoa_time.h.E732A6D721A74C47.idx  cocoa_window.m.35C03267D26AE7BA.idx  context.c.14B1CB7894140A6E.idx  defaults.h.7CE1B0DEBC48309F.idx  egl_context.c.8877565A07BAB294.idx  fileman.hpp.987D86EA3B773928.idx  framework.hpp.F7ED786335B9C09B.idx  glfw3.h.AC30125B73330A17.idx  glfw3native.h.81DAE69A1C2C37D7.idx  imconfig.h.FF19BD6E48333A14.idx  imgui.cpp.E07B957FBD53DD1D.idx  imgui.h.88B23AE75FAB84B4.idx  imgui_demo.cpp.9AA427EC9B2DAF82.idx  imgui_draw.cpp.FEB6DC33E7D4677F.idx  imgui_impl_glfw.cpp.EE4A3E95F779B376.idx  imgui_impl_glfw.h.65A111CAEC526D58.idx  imgui_impl_opengl3.cpp.F7B70FD9BBBBB291.idx  imgui_impl_opengl3.h.5A015C3C63551C1D.idx  imgui_impl_opengl3_loader.h.0173177F5A080950.idx  imgui_internal.h.2C56F283345D2FB0.idx  imgui_tables.cpp.2FBA0E0F392EE550.idx  imgui_widgets.cpp.FCE54BFD0CCF608E.idx  imstb_rectpack.h.70CF1FFC6F424CDA.idx  imstb_textedit.h.BBBD189C54AD0920.idx  imstb_truetype.h.4B9461DD0E2E1A24.idx  init.c.4A534A23F89A24E2.idx  input.c.775B2BFC9906CE98.idx  internal.h.BD74F6307671EAB2.idx  json.hpp.FAD67634A87F7902.idx  jwt.h.0B33E37A8E75EEA4.idx  main.cpp.43274593AC09045F.idx  (+21 more)
ai/: ai.hpp  clients.cpp  clients.hpp  deepl.cpp  deepl.hpp  google.cpp
apis/: ai.cpp  ai.hpp  deepl.cpp  deepl.hpp  google.cpp  google.hpp  openrouter.cpp  openrouter.hpp
qt/: main.cpp  main_window.cpp  main_window.hpp
setman/: company.cpp  company.hpp  config.cpp  config.hpp  database.cpp  database.hpp  episode.cpp  episode.hpp  error.hpp  language.hpp  series.cpp  series.hpp  uuid.hpp
setman/ai_endpoints/: ai.hpp  curl_helpers.cpp  curl_helpers.hpp  deepl.cpp  deepl.hpp  google.cpp  google.hpp  openrouter.cpp  openrouter.hpp
setman/conversations/: conversation.cpp  conversation.hpp
setman/materials/: cut.cpp  cut.hpp  element.cpp  element.hpp  image.cpp  image.hpp  material.cpp  material.hpp
setman/translation_service/: response_converters.cpp  response_converters.hpp  translation_service.hpp  unified_response.hpp
settei_man/: Element.cpp  Element.hpp  Image.cpp  Image.hpp  Series.cpp  Series.hpp  company.cpp  company.hpp  config.cpp  config.hpp  cuts.cpp  cuts.hpp  episode.cpp  episode.hpp  materials.cpp  materials.hpp  mats.cpp  mats.hpp  settei_man.cpp  types.hpp  utils.hpp
src/: archive.txt  fileman.hpp  framework.hpp  main.cpp  ml.hpp  temp.hpp
src/goog/: goog.go
web/: ai.cpp  google.hpp  openrouter.cpp
